--- a/Assignments.html
+++ b/Assignments.html
@@ -143,7 +143,7 @@
 <body>
 
   <header>
-    <img src="LIEN_VERS_TON_LOGO.png" alt="Logo FONME">
+    <img src="IMG-20241130-WA0003 - Copie (1).jpg" alt="Logo FONME">
     <h1>FONME - Nos Réalisations</h1>
   </header>
 
@@ -159,19 +159,101 @@
 
   <div class="cards-container" id="cards-container">
     <div class="card" data-category="sante">
-      <img src="image1.jpg" alt="Réalisation 1">
+      <img src="2.jpg" alt="Réalisation 1">
       <div class="card-body">
-        <div class="card-title">Distribution de kits médicaux</div>
-        <div class="card-text">Des centaines de familles bénéficiaires à Kinshasa, en partenariat avec l'hôpital Saint-Joseph.</div>
+        <div class="card-title">Association de défenses des droits des patients</div>
+        <div class="card-text">Conférence de gouverneur.</div>
       </div>
       <div class="card-footer">
-        <a href="https://facebook.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://web.facebook.com/share/p/1Beb4b4Lbg/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
         <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
         <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
         <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
       </div>
     </div>
   </div>
+    <div class="cards-container" id="cards-container">
+    <div class="card" data-category="Éducation">
+      <img src="9.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">La dotation des équiements informatiques aux finalistes</div>
+        <div class="card-text">Équipe de supervision du programme d'encadrement des enfants orphelins prisent en charge par la <strong>FONME</strong> . Je signale la présence du chargé de programme éducation Monsieur Gilbert Lukungulika , du point focal SAWA Ziraje Alain et la prise de vue des élèves finalistes accompagnés de leurs tuteurs..</div>
+      </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/1As4WNu23c/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+    </div>
+  <div class="cards-container" id="cards-container">
+    <div class="card" data-category="Éducation">
+      <img src="5.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">La formation en coupe et couture</div>
+        <div class="card-text">En moins de 4 mois, des jeunes formés par la <strong>Fondation NSIMIRE MUZIGIRWA Élodie</strong> à <strong>Luhihi et Kabamba</strong> deviennent autonomes. Premier lot d’uniformes déjà prêt pour 400 orphelins bénéficiaires.</div>
+      </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/1CLUvmBELS/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+    <div class="cards-container" id="cards-container">
+    <div class="card" data-category="Éducation">
+      <img src="8.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">Eveil entrepreneurial</div>
+        <div class="card-text">Deogratias Matabaro en plein meeting à la paroisse de Murhesa pour le compte de la fondation NSIMIRE MUZIGURWA Élodie.</div>
+      </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/19AtnVrXpf/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+      <div class="cards-container" id="cards-container">
+    <div class="card" data-category="Santé">
+      <img src="6.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">30 jours d'activisme et de sensibilisation sur l'albinisme</div>
+        <div class="card-text">Kabare: La Fondation NSIMIRE MUZIGIRWA Elodie lance 30 jours d'activisme et de sensibilisation sur l'albinisme.* 
+13 juin de chaque année,  le monde commémore la journée internationale de sensibilisation sur l'albinisme. Cette journée a pour but de sensibiliser la population sur les défis auxquels sont confrontés les albinos. C'est entre autres,  la stigmatisation, la ségrégation, la violence et la discrimination. .</div>
+      </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/1EFuSTkGjL/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+    </div>
+         <div class="cards-container" id="cards-container">
+    <div class="card" data-category="all">
+      <img src="10.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">Début des travaux .</div>
+      <div class="card-text">Au bord du lac Kivu, dans le groupement de Luhihi, village de Mwirunga, Me Élodie NSIMIRE MUZIGIRWA, présidente et initiatrice de la fondation NSIMIRE MUZIGIRWA Élodie FONME en sigles a initier un projet de construction d'un Hangar pour abriter les vendeurs dans le petit marché de MWIRUNGA </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/1HbKfVM5s8/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+    <div class="cards-container" id="cards-container">
+    <div class="card" data-category="all">
+      <img src="22.jpg" alt="Réalisation 1">
+      <div class="card-body">
+        <div class="card-title">Assistance à plus de 1000 personnes deplacées.</div>
+      <div class="card-text">La FONME, Fondation NSIMIRE MUZIGIRWA Elodie,  apporte une assistance aux déplacés de Kalehe et Goma se trouvant à Mugererebo dans le territoire de Kabare et sensibilise pour une chaîne de solidarité.*
+Près de 1.000 déplacés en provenance de Minova et Kasunyu dans le territoire de Kalehe ainsi que ceux de Goma ayant fui les affrontements entre les forces loyalistes et les agresseurs, se retrouvent aujourd'hui dans le village de Mugererebo </div>
+      <div class="card-footer">
+        <a href="https://web.facebook.com/share/p/19Nrqs1kAQ/" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124010.png"></a>
+        <a href="https://wa.me" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/124/124034.png"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"></a>
+        <a href="https://tiktok.com" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png"></a>
+      </div>
+    </div>
+
 
   <div class="pagination">
     <button onclick="prevPage()">&laquo; Précédent</button>
